fix: text contrast

--- a/custom/birka/assets/sass/components/_cookies-consent.scss
+++ b/custom/birka/assets/sass/components/_cookies-consent.scss
@@ -9,6 +9,11 @@
     justify-content: space-between;
     align-items: center;
 
+    a {
+        color: #fff;
+        text-decoration: underline;
+    }
+
     .buttons {
         display: flex;
         align-items: center;
